--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -14,8 +14,13 @@
         are proud of. You like it? Want more? Come to join&nbsp;us!</p>
     </div>
     <div class="box jobs_positions mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <h3>OPENED POSITIONS</h3>
-      <div class="mdc-layout-grid__inner">
+      <div class="hire-jobs"></div>
+      <script id="hire-embed-loader" async defer
+              src="https://hire.withgoogle.com/s/embed/hire-jobs.js?company=topmonkscom">
+
+      </script>
+    </div>
+    <!--<div class="mdc-layout-grid__inner">
         <div
           class="middle-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <a>Backend Developer (Node.js)</a>
@@ -48,7 +53,7 @@
           class="middle-text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p>Prague, Czech Republic</p>
         </div>
-      </div>
+      </div>-->
     </div>
     <div class="contact-info mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <p>Interested? Get in touch with Anička! <a href="mailto:happy@topmonks.com">happy@topmonks.com</a> / <a
@@ -587,6 +592,3 @@
 
 <p> it, just fill the form for relevant position below or <a href="mailto:jobs@topmonks.com">let us know</a> and we'll
   discuss the details. We love meeting interesting people!</p>
-<div class="hire-jobs"></div>
-<script id="hire-embed-loader" async defer
-        src="https://hire.withgoogle.com/s/embed/hire-jobs.js?company=topmonkscom"></script>
