Added all values

--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -116,7 +116,7 @@
       <p>Your freedom can’t affect the freedom of others.</p>
     </div>
 
-    <!--  <div
+    <div
         class="tm-values_box tm-values_box-hidden mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <svg width="100" height="48" viewBox="0 0 100 48" fill="none" xmlns="http://www.w3.org/2000/svg">
           <title>[icon] Success</title>
@@ -189,7 +189,7 @@
             fill="#5C5FD4"/>
         </svg>
         <p>Weirdness, non-conformity is welcome.</p>
-      </div>-->
+      </div>
 
   </div>
   <!-- <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
