ticket component layout

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -4,3 +4,32 @@
 {% block title %}
 #monkstage
 {% endblock %}
+
+
+{% block content %}
+<section>
+  <div class="mdc-layout-grid tm-layout-wrapper">
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell--span-12">
+        <h1>#monkstage <span class="tm-text__h1-subtitle">Blockchain Edition</span></h1>
+      </div>
+      <div class="mdc-layout-grid__cell--span-6">
+        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.</p>
+      </div>
+    </div>
+    <div class="mdc-layout-grid__inner">
+      <div class="mdc-layout-grid__cell--span-10">
+        <div class="tm-strip">
+          <div class="tm-strip__info">
+            <span class="tm-strip__info--figure">10.</span> September 2019 <br />19:00
+          </div>
+          <div class="tm-strip__info">
+            <span class="tm-strip__info--figure">10.</span> Kino Atlas <br />Sokolovská 371/1, Praha
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+{% endblock %}
