WIP info ticket layout finished

--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -21,10 +21,13 @@
       <div class="mdc-layout-grid__cell--span-10">
         <div class="tm-strip">
           <div class="tm-strip__info">
-            <span class="tm-strip__info--figure">10.</span> September 2019 <br />19:00
+            <span class="tm-strip__info_figure">10.</span> September 2019 <br />19:00
           </div>
           <div class="tm-strip__info">
-            <span class="tm-strip__info--figure">10.</span> Kino Atlas <br />Sokolovská 371/1, Praha
+            <span class="tm-strip__info_figure tm-strip__info_figure--map"></span> Kino Atlas <br />Sokolovská 371/1, Praha
+          </div>
+          <div class="tm-strip__info">
+            <span class="tm-strip__info_figure">390</span><span class="tm-layout--flex-align-start">Kč</span><a href="" class="tm-btn tm-btn--inverse">get tickets now</a>
           </div>
         </div>
       </div>
