--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -10,15 +10,46 @@
 <section>
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell--span-12">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>#monkstage <span class="tm-text__h1-subtitle">Blockchain Edition</span></h1>
       </div>
-      <div class="mdc-layout-grid__cell--span-6">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
         <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness.</p>
       </div>
     </div>
+    <div class="mdc-layout-grid__inner tm-speakers">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-layout--display-flex">
+        <div class="tm-speaker">
+          <img class="tm-speaker__img" src="../images/img_speaker_01.png">
+          <div>
+            Jiri Fabian
+            <span class="tm-text--subtext tm-layout--display-block">
+              Lord / TopMonks
+            </span>
+          </div>
+        </div>
+        <div class="tm-speaker">
+          <img class="tm-speaker__img" src="../images/img_speaker_02.png">
+          <div>
+            Zdeněk Cendra
+            <span class="tm-text--subtext tm-layout--display-block">
+                Founder / CDN77
+              </span>
+          </div>
+        </div>
+        <div class="tm-speaker">
+          <img class="tm-speaker__img" src="../images/img_speaker_03.png">
+          <div>
+            Ondřej Krátký
+            <span class="tm-text--subtext tm-layout--display-block">
+                CEO / Liftago
+              </span>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell--span-10">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-10">
         <div class="tm-strip">
           <div class="tm-strip__info">
             <span class="tm-strip__info_figure">10.</span> September 2019 <br />19:00
