testimonials and meadia sections

--- a/monkstage.topmonks.com/src/html/shared/header.html
+++ b/monkstage.topmonks.com/src/html/shared/header.html
@@ -44,9 +44,9 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
         <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
-            <li class=""><a href="#about-event">about event</a></li>
-            <li class=""><a href="#contacts">contacts</a></li>
-            <li class=""><a class="tm-btn" href="/">get tickets now</a></li>
+            <li class=""><a href="#about-event">o akci</a></li>
+            <li class=""><a href="#contacts">kontakty</a></li>
+            <li class=""><a class="tm-btn" href="/">koupit vstupenky</a></li>
           </ul>
         </nav>
       </div>
