--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -14,7 +14,7 @@
         <h1>#monkstage <span class="tm-text__h1-subtitle">Blockchain Edition</span></h1>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem kryptoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280" target="_blank">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
+        <p>Odvětví kryptoaktiv vzniklo teprve před deseti lety. Od té doby jsme v tomto oboru opakovaně zažili vlnu nadšení a deprese. Pod nánosem mýtů o splasklé bublině kolem kryptoměn roste nový ekosystém, který má své dominantní hráče, hrající dlouhodobou hru. Na <a href="https://www.eventbrite.com/e/monkstage-blockchain-edition-tickets-56054420280?aff=webtext" target="_blank">#monkstage</a> uvítáme hned tři zakladatele úspěšných českých startupů z tohoto odvětví.</p>
       </div>
     </div>
     <div class="mdc-layout-grid__inner tm-speakers">
