--- a/www.topmonks.com/src/html/jobs/index.html
+++ b/www.topmonks.com/src/html/jobs/index.html
@@ -10,8 +10,8 @@
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Join our Monastery. We are hiring!</h2>
-      <p>Freedom. Anarchy. Passion. Friendship. Chaos. That’s&nbsp;only part of what we
-        are proud of. You like it? Want more? Come to join&nbsp;us!</p>
+      <p>Freedom. Anarchy. Passion. Friendship. Chaos.
+        That’s just a small part of what we stand for. Sounds like you? Come join us!</p>
     </div>
     <div class="box jobs_positions mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <div class="hire-jobs"></div>
@@ -69,8 +69,8 @@
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="page_sub-title page_sub-title_left mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Our values are pretty clear</h2>
-      <p>We live them every day. They are important for us. Do they resonate with you
-        as well? Which one the&nbsp;most?</p>
+      <p>We live what we preach in our daily life. We walk our talk.
+        Do you resonate with our values? Which one is the most compelling for you? </p>
     </div>
     <div
       class="tm-values_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
@@ -203,9 +203,8 @@
 <section class="tm-projects mdc-layout-grid">
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <h2>What projects are we working on?</h2>
-      <p>Variability is our specialty. Whether it’s&nbsp;B2B, startup or blockchain, we
-        choose meaningful projects with a modern tech&nbsp;stack.</p>
+      <h2>What are we working on?</h2>
+      <p>Variability is our specialty. Whether it’s B2B, startup or blockchain, we choose meaningful projects with a modern tech stack.</p>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
       <svg width="135" height="117" viewBox="0 0 135 117" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -254,9 +253,7 @@
         </defs>
       </svg>
       <h3>Bigger companies</h3>
-      <p>We are not an agency. We prefer to deliver complete custom solutions rather
-        than people. Be prepared to transform the processes &amp; structures of our B2B
-        clients into lovable products. Of course, remotely, if you&nbsp;want.</p>
+      <p>We are not an agency. We prefer to deliver complete custom solutions rather than people. We transform the processes & structures of our B2B clients into lovable products. Of course, remotely, if that’s your preference.</p>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
       <svg width="135" height="117" viewBox="0 0 135 88" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -331,9 +328,7 @@
         </defs>
       </svg>
       <h3>Startups</h3>
-      <p>Working in our startup squat is just great! You are part of the world full of
-        great ideas, freedom and newest technologies. It’s&nbsp;you who can convert
-        thoughts into the real products.</p>
+      <p>Working with our startup crew will open your mind! Welcome to the world of innovative ideas, decentralized freedom and latest technologies. We support our clients in converting thoughts into real, user-friendly products.</p>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
       <svg width="110" height="117" viewBox="0 0 110 110" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -510,8 +505,7 @@
         </defs>
       </svg>
       <h3>Blockchain projects</h3>
-      <p>TopMonks is a decentralized company. We transformed our passion about it into a separate branch of the firm.
-        Our Blockchain Studio hosts top-notch projects, starting with UX, ending with complex backend development.</p>
+      <p>TopMonks is a decentralized company. What does it mean? We transmute our passion for blockchain into a fraction of our team. Our Blockchain Studio. Working on top-notch projects, starting with UX, ending with complex backend development.</p>
     </div>
   </div>
 </section>
@@ -523,32 +517,23 @@
   <div class="mdc-layout-grid__inner tm-layout-wrapper">
     <div class="page_sub-title page_sub-title_left mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h2>Everyday life in TopMonks</h2>
-      <p>We don't need you messing around from 9&nbsp;to 5&nbsp;in the office. We want to
-        deliver the perfection! As our team is mostly distributed, we've worked
-        diligently to improve the ways we work together, and with our clients. Don't
-        count hours, deliver!</p>
+      <p>We don't need you messing around from 9 to 5 in the office. We want to deliver perfection! As our team is mostly distributed, we've worked diligently to improve the ways we work together, and with our clients. Don't count hours, deliver!</p>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
       <h3>Slack</h3>
-      <p>Effective communication is the essence of cooperation&nbsp;&ndash; not only across
-        our projects, but also with some of our customers. We don't care where do you
-        sit, but once you are working, you should be available.</p>
+      <p>Effective communication is the essence of cooperation - across all of our projects,  and with all of our customers. We don't really care where you sit, but once you are working, you should be available.</p>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
       <h3>Github</h3>
-      <p>All our projects are running in GitHub. Many of them also use GitHub Issues for tracking the progress. Together
-        with Slack it is the alpha and omega of our cooperation.</p>
+      <p>All our projects are running in GitHub. Many of them also use GitHub Issues for tracking the progress. Together with Slack it is the alpha and omega of our cooperation.</p>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
       <h3>Swarmpit</h3>
-      <p>Most of our projects are containerized and run in Docker Swarm environment. For management of these we
-        developed our own UI called Swarmpit.</p>
+      <p>Most of our projects are containerized and run in Docker Swarm environment. For management of these we developed our own UI called Swarmpit.</p>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
       <h3>Quip</h3>
-      <p>Here we share all the projects documentation, invoices, even our company
-        library, basically our whole knowledge. Ask Rarous for his amazing
-        cook&nbsp;book!</p>
+      <p>Here we share all the projects documentation, invoices, even our company library, basically our whole knowledge. Ask Rarous for his amazing cook book!</p>
     </div>
   </div>
 </section>
@@ -559,16 +544,12 @@
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3>Come to our events</h3>
-      <p>Come to TopMonks breakfast or our monthly TopMonks Caffe, where we share our knowledge. We also hold
-        conferences on the future of work and blockchain. We are members of many other dev events where we don't only
-        participate but also often lecture.</p>
+      <p>Come to TopMonks breakfast or our monthly TopMonks Caffe, where we share our knowledge. We also hold conferences on the future of work and blockchain. We are members of many other dev events where we don't only participate but also often lecture. </p>
       <a class="action-button jumbotron__cta" href="https://www.topmonks.com/meet-us/">COME AND MEET US</a>
     </div>
     <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <h3>Get in touch with Anička</h3>
-      <p>We are always on the lookout for talented Monks to join our team. Get in
-        touch with Anička to find out more about opened positions. In case you have not
-        found the desired position, let us know. will figure something&nbsp;out.</p>
+      <p>We are always on the lookout for talented Monks to join our team. Get in touch with Anicka to find out more about opened positions. In case you have not found the desired position, let us know. will figure something out.</p>
       <div class="mdc-layout-grid__inner">
         <div
           class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-iphone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
