--- a/monkstage.topmonks.com/src/html/index.html
+++ b/monkstage.topmonks.com/src/html/index.html
@@ -81,7 +81,7 @@
         </footer>
       </blockquote>
       <blockquote class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet tm-box tm-box--testimonial">
-        <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system</p>
+        <p>#monkstage je kombinace akce pro veřejnost v téměř priváním prostředí. Formát měl hlavu a patu a i s odstupem času akci vnímám jako světlou výjimku v záplavě startup akcí. Když něco děláte srdíčkem, na produktu se to pozná. Tohle je jedna z akcí, kde nasazení organizátorů a mix hostů fakt dával smysl. Na další ročník rád zaplatím vstupné.</p>
         <hr/>
         <footer class="tm-speaker">
           <img class="tm-speaker__img tm-speaker__img--testimonial" src="../images/img_speaker_02.png" alt="Zdeněk Cendra">
